@startuml Famous-Cities Diagram

class User {
  constructor(name, age, phoneNumber, email, location) {
    this.name = name
    this.age = age
    this.phoneNumber = phoneNumber
    this.email = email
    this.location = location
    this.photos = []
    this.interestedBy = []
    this.commented = []
    this.likes = []
    this.saved = []
    }


  package Events {
    class Events {
    constructor(tourName, eventDate, location, price) {
    this.tourName = tourName
    this.eventDate = eventDate
    this.location = location
    this.price = price
    this.likedBy = []
    this.attended = [] // created
    this.payments = []
    this.cancelledBy = []
    this.comments = []
  }

class TalkEvent extends Events {}
class TourEvent extends Events {}
  }

  class TopVideos {
    constructor(videoName) {
    this.videoName = videoName
    this.likedBy = []
    this.comments = []
    this.sharedOn = []
    this.sharedBy = []
  }
  User --> TalkEvent : attends, interests, likes
  User --> TourEvent : attends, interests, likes
  User --> TopVideos : likes, sharedBy

  @enduml
